AFFICHE le formulaire d'avis si le user est connecté+Responsive RESPONSIVE pour la homepage et l'affichage produit

--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -74,7 +74,7 @@
                 </div>
                 <div class="tile is-parent">
                     <div class="tile is-child box">
-                        <p class="title pb-2 has-text-centered">Décovrez le produit du mois</p>
+                        <p class="title is-size-5-touch is-size-3-desktop pb-2 has-text-centered">Décovrez le produit du mois</p>
                         <p>{{ produit.title | default('') }}</p>
 {#                        <figure class="image is-4by3 ">#}
 {#                            <img alt="signe d'intérogation" src="https://bulma.io/images/placeholders/640x480.png">#}
