--- a/templates/includes/produit_list.html.twig
+++ b/templates/includes/produit_list.html.twig
@@ -1,6 +1,6 @@
-<div class="columns is-multiline">
+<div class="columns is-flex is-multiline is-centered">
     {% for produit in produits %}
-        <div class="column is-one-third"> {# is-one-half / is-one-quarter #}
+        <div class="column is-half-tablet is-one-third-desktop"> {# is-one-half / is-one-quarter #}
             <div class="box">
                 <article class="media">
                     <div class="media-left">
