--- a/templates/compte/profil.html.twig
+++ b/templates/compte/profil.html.twig
@@ -4,7 +4,9 @@
 
 {% block content %}
     <div class="section">
-        <h1 class="title">Mon Profil</h1>
+        <h1 class="title has-text-centered">Mon Profil</h1>
+        <div class="columns is-centered">
+            <div class="column is-one-third">
         {% include 'includes/flashes.html.twig' %}
         {{ form_start(profilForm) }}
             {{ form_row(profilForm.email, {
@@ -25,5 +27,7 @@
             <button class="button is-primary is-fullwidth" type="submit">Enregister</button>
             <a href="{{ path('reset_pass') }}" class="button is-fullwidth is-success mt-2">Modifier le mot de passe</a>
         {{ form_end(profilForm) }}
+            </div>
+        </div>
     </div>
 {% endblock %}
