--- a/templates/_admin_template.html.twig
+++ b/templates/_admin_template.html.twig
@@ -20,26 +20,33 @@
 
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
-                <a class="navbar-item" href="{{ path('admin_produit_liste') }}">
-                    Produits
-                </a>
-                <a class="navbar-item" href="{{ path('admin_categorie_liste') }}">
-                    Catégories
-                </a>
-                <a class="navbar-item" href="{{ path('admin_gestion_liste') }}">
-                    Types de gestion
-                </a>
-                <a class="navbar-item" href="{{ path('admin_fonds_euro_liste') }}">
-                    Fonds en euros
-                </a>
-                <a class="navbar-item" href="{{ path('admin_assureur_liste') }}">
-                    Assureurs
-                </a>
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link is-arrowless">
+                        Menu Produits
+                    </a>
+                    <div class="navbar-dropdown is-boxed">
+                        <a class="navbar-item" href="{{ path('admin_produit_liste') }}">
+                            Produits
+                        </a>
+                        <a class="navbar-item" href="{{ path('admin_categorie_liste') }}">
+                            Catégories
+                        </a>
+                        <a class="navbar-item" href="{{ path('admin_gestion_liste') }}">
+                            Types de gestion
+                        </a>
+                        <a class="navbar-item" href="{{ path('admin_fonds_euro_liste') }}">
+                            Fonds en euros
+                        </a>
+                        <a class="navbar-item" href="{{ path('admin_assureur_liste') }}">
+                            Assureurs
+                        </a>
+                    </div>
+                </div>
                 <a class="navbar-item" href="{{ path('admin_user_liste') }}">
                     Utilisateurs
                 </a>
-                <a class="navbar-item" href="">
-                    Commentaires
+                <a class="navbar-item" href="{{ path('admin_avisproduit_liste') }}">
+                    Avis produits
                 </a>
                 <a class="navbar-item" href="">
                     Notes
@@ -63,5 +70,30 @@
     </nav>
     {# Bloc qui contiendra le contenu de chaque page #}
     {% block content %}{% endblock %}
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
 
+            // Get all "navbar-burger" elements
+            const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+
+            // Check if there are any navbar burgers
+            if ($navbarBurgers.length > 0) {
+
+                // Add a click event on each of them
+                $navbarBurgers.forEach( el => {
+                    el.addEventListener('click', () => {
+                        // Get the value of the attr data-target="navbarBasicExample" from the burger div which is navbarBasicExample
+                        const target = el.dataset.target;
+                        // Using the targe variable(navbarBasicExample), we get the div with the id "navbarBasicExample"
+                        const $target = document.getElementById(target);
+                        // on both the "navbar-burger" and the "navbar-menu"
+                        el.classList.toggle('is-active'); // Toggle the "is-active" class on the burger div
+                        $target.classList.toggle('is-active'); // Toggle the "is-active" class on the div with the id "navbarBasicExample"
+
+                    });
+                });
+            }
+
+        });
+    </script>
 {% endblock %}
