--- a/templates/admin_gestion/edit.html.twig
+++ b/templates/admin_gestion/edit.html.twig
@@ -5,14 +5,10 @@
 {% block content %}
     <div class="section">
     <h1 class="title has-text-centered">Modifier le type de gestion : {{ gestion.nom }}</h1>
-
-    <div class="columns">
-        <div class="column"></div>
+    <div class="columns is-centered">
         <div class="column is-one-third">
             {% include 'includes/flashes.html.twig' %}
             {% include 'admin_gestion/_gestion_form.html.twig' %}
         </div>
-        <div class="column"></div>
     </div>
-
 {% endblock %}
