--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -4,7 +4,9 @@
 
 {% block content %}
     <div class="section">
-        <h1 class="title">Inscription</h1>
+        <h1 class="title has-text-centered">Inscription</h1>
+        <div class="columns is-centered">
+            <div class="column is-one-third">
         {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email,{
             label : 'Adresse e-mail'
@@ -29,5 +31,7 @@
         }) }}
         <button type="submit" class="button is-primary is-fullwidth">Inscription</button>
         {{ form_end(registrationForm) }}
+            </div>
+        </div>
     </div>
 {% endblock %}
