--- a/templates/security/reset.html.twig
+++ b/templates/security/reset.html.twig
@@ -4,15 +4,19 @@
 
 {% block content %}
     <div class="section">
-        <h1 class="title"> Modification du mot de passe</h1>
-        {{ form_start(resetForm) }}
-            {{ form_row(resetForm.plainPassword.first,{
-                label : 'Mot de passe'
-            }) }}
-        {{ form_row(resetForm.plainPassword.second, {
-                label : 'Confirmer le mot de passe'
-        }) }}
-        <button class="button is-fullwitdh is-primary">Modifier</button>
-        {{ form_end(resetForm) }}
+        <h1 class="title has-text-centered"> Modification du mot de passe</h1>
+        <div class="columns is-centered">
+            <div class="column is-one-third">
+                {{ form_start(resetForm) }}
+                {{ form_row(resetForm.plainPassword.first,{
+                    label : 'Mot de passe'
+                }) }}
+                {{ form_row(resetForm.plainPassword.second, {
+                    label : 'Confirmer le mot de passe'
+                }) }}
+                <button class="button is-fullwitdh is-primary">Modifier</button>
+                {{ form_end(resetForm) }}
+            </div>
+        </div>
     </div>
 {% endblock %}
