--- a/templates/admin_produit/_produit_form.html.twig
+++ b/templates/admin_produit/_produit_form.html.twig
@@ -50,3 +50,12 @@
     Enregistrer
 </button>
 {{ form_end(produitForm) }}
+<script>
+    const fileInput = document.querySelector('#produit_form_image input[type=file]');
+    fileInput.onchange = () => {
+        if (fileInput.files.length > 0) {
+            const fileName = document.querySelector('#produit_form_image .file-name');
+            fileName.textContent = fileInput.files[0].name;
+        }
+    }
+</script>
