--- a/templates/produit/affichage.html.twig
+++ b/templates/produit/affichage.html.twig
@@ -21,13 +21,13 @@
                         {% for fonds_euro in produit.fondsEuro %}
                             {% if fonds_euro.annee == annee_en_cours %}
                                 <span class="tag">
-                                            {{ fonds_euro.tauxpbfloat }}
-                                         </span>
+                                    {{ fonds_euro.tauxpbfloat }}
+                                </span>
                                 <span class="tag is-primary">
-                                            <span class="icon">
-                                                <i class="fas fa-percent"></i>
-                                            </span>
-                                        </span>
+                                    <span class="icon">
+                                        <i class="fas fa-percent"></i>
+                                    </span>
+                                </span>
                             {% endif %}
                         {% endfor %}
                         <span class="tag">
@@ -52,7 +52,7 @@
                         </figure>
                     {% else %}
                         <figure class="image is-1by1">
-                            <img alt="img" src="https://loremflickr.com/1024/1024/clothes/all?lock={{ produit.id }}">
+                            <img src="https://loremflickr.com/1024/1024/clothes/all?lock={{ produit.id }}" alt="img">
                         </figure>
                     {% endif %}
                 </div>
@@ -61,9 +61,9 @@
     </section>
     <section class="section px-0 py-0">
         <div class="container has-background-white-bis ">
-            <div class="columns is-mobile is-centered">
-                <div class="column is-three-quarters mt-0 pb-5 mx-0 px-5 has-text-centered-mobile">
-                    <h1 class="title is-size-4">Caracteristiques principales</h1>
+            <div class="columns is-centered mx-0 my-0">
+                <div class="column is-half mt-0 pb-5 mx-0 has-text-centered-mobile">
+                    <h1 class="has-text-left title is-size-4">Caracteristiques principales</h1>
                     <table class="table is-bordered">
                         <thead>
                         <tr>
@@ -74,7 +74,7 @@
                         <tfoot>
                         <tr>
                             <th class="px-3">Note Evaluation</th>
-                            <th class="has-text-centered">5/10</th>
+                            <th class="has-text-centered">{{ moyenne | number_format(2,'.','') }}/10</th>
                         </tr>
                         </tfoot>
                         <tbody>
@@ -119,6 +119,27 @@
                         </tbody>
                     </table>
                 </div>
+                <div class="column is-half">
+                    <h1 class="has-text-left title is-size-4">Avis produit</h1>
+                    {% for avis in touslesavis |slice(0, 2) %}
+                        <div class="box">
+                            <div class="media-content">
+                                <div class="content">
+                                    <p>
+                                        <strong>{{ avis.auteur.prenom }} {{ avis.auteur.nom | upper }}</strong> <small>@{{ avis.auteur.pseudo }}</small>
+                                        <br>
+                                        {{ avis.commentaire }}
+                                    </p>
+                                    <div class="tags has-addons">
+                                        <span class="tag">
+                                            {{ avis.note }}/10
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
         <div class="container has-background-white-bis">
@@ -130,7 +151,7 @@
                         label : 'Note'
                     }) }}
                     <div class="tags has-addons are-medium mt-4">
-                        <span class="tag is-success" id="note_js">50</span><span class="tag is-primary">/100</span>
+                        <span class="tag is-success" id="note_js">5</span><span class="tag is-primary">/10</span>
                     </div>
                     {{ form_row(formAvisProduit.commentaire, {
                         label : 'Commentaire'
@@ -149,7 +170,7 @@
     <script>
         function setNoteJs(val) {
             document.getElementById("note_js").innerHTML = val;
-            if (val > 50) {
+            if (val > 5) {
                 document.getElementById("note_js").classList.remove("is-danger");
                 document.getElementById("note_js").classList.add("is-success");
             } else {
