--- a/templates/includes/produit_list.html.twig
+++ b/templates/includes/produit_list.html.twig
@@ -1,6 +1,8 @@
-<div class="columns is-flex is-multiline is-centered">
+{#<div class="columns is-tablet is-multiline is-centered">#}
+<div class="columns">
     {% for produit in produits %}
-        <div class="column is-half-tablet is-one-third-desktop"> {# is-one-half / is-one-quarter #}
+        <div class="column is-full-mobile is-full-touch is-half-desktop is-one-third-widescreen"> {# is-one-half / is-one-quarter #}
+{#        <div class="column is-half-tablet is-one-third-widescreen"> #}{# is-one-half / is-one-quarter #}
             <div class="box">
                 <article class="media">
                     <div class="media-left">
