--- a/templates/produit/liste.html.twig
+++ b/templates/produit/liste.html.twig
@@ -4,7 +4,9 @@
 
 {% block content %}
     <div class="section">
-        <h1 class="title mt-4">Liste des produits : {{ list_produits|length }}</h1>
-        {% include "includes/produit_list.html.twig" with {produits: list_produits, meilleur_taux: meilleur_taux} %}
-    </div>
+        <div class="container is-fullhd">
+           <h1 class="title mt-4">Liste des produits : {{ list_produits|length }}</h1>
+           {% include "includes/produit_list.html.twig" with {produits: list_produits, meilleur_taux: meilleur_taux} %}
+       </div>
+   </div>
 {% endblock %}
