--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -6,39 +6,40 @@
     {# sera affiché sur toutes les pages du Front-Office #}
 
     <nav class="navbar is-light">
-        <div class="navbar-brand">
-            <a class="navbar-item" href="{{ path('home') }}">
-                <p class="subtitle is-4 has-text-primary">
-                    <b>ASSUM</b>
-                </p>
-            </a>
+        <div class="container is-widescreen">
+            <div class="p navbar-brand">
+                <a class="navbar-item" href="{{ path('home') }}">
+                    <p class="subtitle is-4 has-text-primary">
+                        <b>ASSUM</b>
+                    </p>
+                </a>
 
-            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-            </a>
-        </div>
-
-        <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
-                {% if is_granted('ROLE_ADMIN') %}
-                <div class="navbar-item pt-0 pb-1">
-                    <a class="navbar-item button is-light" href="{{ path('admin_produit_liste') }}" >
-                        <span class="icon"><i class="fas fa-lock"></i></span>
-                        <span>Back-Office</span>
-                    </a>
-                </div>
-                {% endif %}
-                <div class="navbar-item pt-0 pb-1">
-                    <a class="navbar-item button is-light" href="{{ path('produits') }}">
-                        <span>Voir tous les produits</span>
-                    </a>
-                </div>
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
             </div>
 
-            <div class="navbar-end">
-                <div class="navbar-item py-0">
+            <div id="navbarBasicExample" class="navbar-menu">
+                <div class="navbar-start">
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <div class="navbar-item pt-0 pb-1">
+                            <a class="navbar-item button is-light" href="{{ path('admin_produit_liste') }}" >
+                                <span class="icon"><i class="fas fa-lock"></i></span>
+                                <span>Back-Office</span>
+                            </a>
+                        </div>
+                    {% endif %}
+                    <div class="navbar-item pt-0 pb-1">
+                        <a class="navbar-item button is-light" href="{{ path('produits') }}">
+                            <span>Voir tous les produits</span>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="navbar-end">
+                    <div class="navbar-item py-0">
                         {# if is_granted('IS_AUTHENTICATED_FULLY') #}
                         {% if app.user %}
                             <a class="navbar-item button is-primary is-small mb-1" href="{{ path('profil') }}">
@@ -56,6 +57,7 @@
                                 Connexion
                             </a>
                         {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
@@ -64,64 +66,66 @@
     {# Bloc qui contiendra le contenu de chaque page #}
     {% block content %} {% endblock %}
     <footer class="footer">
-        <div class="tile is-ancestor">
-            <div class="tile">
-                <div class="tile is-7 is-parent">
-                    <div class="tile is-child box">
-                        <p class="title">Dernier article publié</p>
-                        <p class="subtitle">Titre article</p>
-                        <p class="content"> Début de l'article, ensuite des ... (<a href="">Lire la suite</a>)</p>
+        <div class="container is-fullhd">
+            <div class="tile is-ancestor">
+                <div class="tile">
+                    <div class="tile is-7 is-parent">
+                        <div class="tile is-child box">
+                            <p class="title">Dernier article publié</p>
+                            <p class="subtitle">Titre article</p>
+                            <p class="content"> Début de l'article, ensuite des ... (<a href="">Lire la suite</a>)</p>
+                        </div>
                     </div>
-                </div>
-                <div class="tile is-parent">
-                    <div class="tile is-child box">
-                        <p class="title is-size-5-touch is-size-3-desktop pb-2 has-text-centered">Décovrez le produit du mois</p>
-                        <p>{{ produit.title | default('') }}</p>
-{#                        <figure class="image is-4by3 ">#}
-{#                            <img alt="signe d'intérogation" src="https://bulma.io/images/placeholders/640x480.png">#}
-{#                        </figure>#}
-                        <div class="tile is-child has-text-centered">
-                            <a href="" class="">
+                    <div class="tile is-parent">
+                        <div class="tile is-child box">
+                            <p class="title is-size-5-touch is-size-3-desktop pb-2 has-text-centered">Décovrez le produit du mois</p>
+                            <p>{{ produit.title | default('') }}</p>
+                            {#                        <figure class="image is-4by3 ">#}
+                            {#                            <img alt="signe d'intérogation" src="https://bulma.io/images/placeholders/640x480.png">#}
+                            {#                        </figure>#}
+                            <div class="tile is-child has-text-centered">
+                                <a href="" class="">
                                 <span class="icon is-large has-text-success ">
                                 <i class="fas fa-7x fa-question-circle"></i>
                                 </span>
-                            </a>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tile is-parent">
+                        <div class="tile is-child box">
+                            RIGHT TILE
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="tile is-ancestor">
                 <div class="tile is-parent">
                     <div class="tile is-child box">
-                        RIGHT TILE
+                        <nav class="level has-text-weight-bold">
+                            <p class="level-item has-text-centered">
+                                <a class="link is-info">Qui sommes nous</a>
+                            </p>
+                            <p class="level-item has-text-centered">
+                                <a class="link is-info">Nous contacter</a>
+                            </p>
+                            <p class="level-item has-text-centered is-hidden-tablet-only">
+                                <a class="link is-info">Newsletter</a>
+                            </p>
+                            <p class="level-item has-text-centered">
+                                <img src="https://bulma.io/images/bulma-type.png" alt="" style="height: 30px;">
+                            </p>
+                            <p class="level-item has-text-centered">
+                                <a class="link is-info">Mentions légales</a>
+                            </p>
+                            <p class="level-item has-text-centered">
+                                <a class="link is-info">Données personelles</a>
+                            </p>
+                            <p class="level-item has-text-centered is-hidden-tablet-only">
+                                <a class="link is-info">Partenaires</a>
+                            </p>
+                        </nav>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="tile is-ancestor">
-            <div class="tile is-parent">
-                <div class="tile is-child box">
-                    <nav class="level has-text-weight-bold">
-                        <p class="level-item has-text-centered">
-                            <a class="link is-info">Qui sommes nous</a>
-                        </p>
-                        <p class="level-item has-text-centered">
-                            <a class="link is-info">Nous contacter</a>
-                        </p>
-                        <p class="level-item has-text-centered is-hidden-tablet-only">
-                            <a class="link is-info">Newsletter</a>
-                        </p>
-                        <p class="level-item has-text-centered">
-                            <img src="https://bulma.io/images/bulma-type.png" alt="" style="height: 30px;">
-                        </p>
-                        <p class="level-item has-text-centered">
-                            <a class="link is-info">Mentions légales</a>
-                        </p>
-                        <p class="level-item has-text-centered">
-                            <a class="link is-info">Données personelles</a>
-                        </p>
-                        <p class="level-item has-text-centered is-hidden-tablet-only">
-                            <a class="link is-info">Partenaires</a>
-                        </p>
-                    </nav>
                 </div>
             </div>
         </div>
