--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,8 +7,10 @@
 
 {% block content %}
     <div class="section">
-        <h1 class="title">Les nouveaux produits</h1>
-        {# inclusion de fichier & passage de variables #}
-        {% include "includes/produit_list.html.twig" with {produits:list_produits} %}
+        <div class="container is-fullhd">
+            <h1 class="title">Les nouveaux produits</h1>
+            {# inclusion de fichier & passage de variables #}
+            {% include "includes/produit_list.html.twig" with {produits:list_produits} %}
+        </div>
     </div>
 {% endblock %}
