--- a/templates/produit/liste.html.twig
+++ b/templates/produit/liste.html.twig
@@ -7,6 +7,9 @@
         <div class="container is-fullhd">
            <h1 class="title mt-4">Liste des produits : {{ list_produits|length }}</h1>
            {% include "includes/produit_list.html.twig" with {produits: list_produits, meilleur_taux: meilleur_taux} %}
+            <div class="pagination mt-2">
+                {{ knp_pagination_render(list_produits) }}
+            </div>
        </div>
    </div>
 {% endblock %}
