--- a/templates/produit/liste.html.twig
+++ b/templates/produit/liste.html.twig
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="section">
         <div class="container is-fullhd">
-           <h1 class="title mt-4">Liste des produits : {{ list_produits|length }}</h1>
+           <h1 class="title mt-4">Liste des produits</h1>
            {% include "includes/produit_list.html.twig" with {produits: list_produits, meilleur_taux: meilleur_taux} %}
             <div class="pagination mt-2">
                 {{ knp_pagination_render(list_produits) }}
