CREE l'entité ARTICLE / Front Office et Back OFFICE Modifie relation ManyToOne avec User Créer le routes et les templates pour le BO (liste, add, edit,   delete) et le FO (liste + affichage). Créer le form (ArticleFormType) Créer deux méthodes dans ArticleRepository pour récupérer tous   les articles sous forme de Query pour le KnpPaginator et pour   récupérer le dernier Article (pour le footer). Modifier les 5 pages pour passer le dernier article au footer. Modifier le footer.

--- a/templates/_admin_template.html.twig
+++ b/templates/_admin_template.html.twig
@@ -48,8 +48,8 @@
                 <a class="navbar-item" href="{{ path('admin_avisproduit_liste') }}">
                     Avis produits
                 </a>
-                <a class="navbar-item" href="">
-                    Notes
+                <a class="navbar-item" href="{{ path('admin_article_liste') }}">
+                    Articles
                 </a>
             </div>
 
