--- a/templates/admin_article/_article_form.html.twig
+++ b/templates/admin_article/_article_form.html.twig
@@ -3,7 +3,8 @@
         label : 'Article nom'
     }) }}
     {{ form_row(articleForm.contenu, {
-        label : 'Contenu de l\'article'
+        label : 'Contenu de l\'article',
+        attr : {'rows': '50'}
     }) }}
 <button type="submit" class="button is-success is-fullwidth">
     Enregistrer
