--- a/templates/admin_article/edit.html.twig
+++ b/templates/admin_article/edit.html.twig
@@ -8,7 +8,7 @@
 
         <div class="columns">
             <div class="column"></div>
-            <div class="column is-one-third">
+            <div class="column is-half">
                 {% include 'includes/flashes.html.twig' %}
                 {% include 'admin_article/_article_form.html.twig' %}
             </div>
