--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -43,3 +43,51 @@ $footer-padding           : 3rem 1.5rem 3rem ;
   opacity: 0;
   transition: opacity 2s;
 }
+
+// ###### MARKDOWN ARTICLE ###### //
+.markdown_bulma {
+  h1,h2,h3,h4,h5,h6 {
+    font-size: revert;
+    font-weight: 600;
+  }
+
+  p {
+    padding: 5px 0;
+    text-align: justify;
+    text-justify: inter-word
+  }
+
+  blockquote {
+    background-color: #f5f5f5;
+    border-left: 5px solid #dbdbdb;
+    padding: 1.25em 1.5em;
+  }
+
+  ul {
+    list-style: disc outside;
+    margin-left: 2em;
+    margin-top: 1em;
+  }
+
+  ol {
+    margin-left: 2em;
+    margin-top: 1em;
+  }
+
+  hr {
+    height: 3px;
+    background-image: linear-gradient(90deg, blue, transparent);
+    border: 0;
+  }
+
+  code {
+    background-color: whitesmoke;
+    color: #021794;
+    font-size: 0.875em;
+    font-weight: bold;
+    padding: 0.25em 0.5em 0.25em;
+  }
+}
+
+
+
