--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -71,7 +71,6 @@ $footer-padding           : 3rem 1.5rem 3rem ;
 
   ol {
     margin-left: 2em;
-    margin-top: 1em;
   }
 
   hr {
@@ -81,10 +80,10 @@ $footer-padding           : 3rem 1.5rem 3rem ;
   }
 
   code {
-    background-color: whitesmoke;
-    color: #021794;
+    background-color: #f5f5f5;
+    color: #302d2d;
     font-size: 0.875em;
-    font-weight: bold;
+    font-weight: 700;
     padding: 0.25em 0.5em 0.25em;
   }
 }
