--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -104,7 +104,7 @@
                     </div>
                     <div class="tile is-parent">
                         <div class="tile is-child box">
-                            RIGHT TILE
+                            Un forum bientôt en ligne
                         </div>
                     </div>
                 </div>
@@ -114,26 +114,20 @@
                     <div class="tile is-child box">
                         <nav class="level has-text-weight-bold">
                             <p class="level-item has-text-centered">
-                                <a class="link is-info">Qui sommes nous</a>
-                            </p>
-                            <p class="level-item has-text-centered">
                                 <a class="link is-info">Nous contacter</a>
                             </p>
-                            <p class="level-item has-text-centered is-hidden-tablet-only">
-                                <a class="link is-info">Newsletter</a>
+                            <p class="level-item has-text-centered">
+                                <a href="{{ path('mentions_legales') }}" class="link is-info">Mentions légales</a>
                             </p>
                             <p class="level-item has-text-centered is-size-2">
 {#                                <img src="https://bulma.io/images/bulma-type.png" alt="" style="height: 30px;">#}
                                 ASSUM
                             </p>
                             <p class="level-item has-text-centered">
-                                <a class="link is-info">Mentions légales</a>
+                                <a href="{{ path('qui_sommes_nous') }}" class="link is-info">Qui sommes nous</a>
                             </p>
                             <p class="level-item has-text-centered">
-                                <a class="link is-info">Données personelles</a>
-                            </p>
-                            <p class="level-item has-text-centered is-hidden-tablet-only">
-                                <a class="link is-info">Partenaires</a>
+                                <a href="{{ path('donnees_personnelles') }}" class="link is-info">Données personnelles</a>
                             </p>
                         </nav>
                     </div>
