--- a/templates/admin_article/add.html.twig
+++ b/templates/admin_article/add.html.twig
@@ -7,7 +7,7 @@
         <h1 class="title has-text-centered">Nouveau Article</h1>
         <div class="columns">
             <div class="column"></div>
-            <div class="column is-one-third">
+            <div class="column is-half">
                 {% include 'admin_article/_article_form.html.twig' %}
             </div>
             <div class="column"></div>
