CREE la possibilite de suppression de compte par le user + BUGS

--- a/templates/compte/profil.html.twig
+++ b/templates/compte/profil.html.twig
@@ -26,6 +26,7 @@
             }) }}
             <button class="button is-primary is-fullwidth" type="submit">Enregister</button>
             <a href="{{ path('reset_pass') }}" class="button is-fullwidth is-success mt-2">Modifier le mot de passe</a>
+            <a href="{{ path('user_suppression_compte') }}" class="button is-fullwidth is-danger mt-2">Supprimer mon compte</a>
         {{ form_end(profilForm) }}
             </div>
         </div>
