--- a/templates/_template.html.twig
+++ b/templates/_template.html.twig
@@ -69,7 +69,7 @@
     </nav>
 
     {# Les messages flash #}
-    <div class="container">
+    <div class="container is-fullhd">
         {% include 'includes/flashes.html.twig' %}
     </div>
 
